Web Inspector: Better categorize CPU usage per-thread / worker https://bugs.webkit.org/show_bug.cgi?id=194564

Unreviewed compilation fix.

Patch by Frederic Wang <fwang@igalia.com> on 2019-03-05

* page/ResourceUsageData.h: Add missing headers.

Canonical link: https://commits.webkit.org/209669@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@242466 268f45cc-cd09-0410-ab3c-d52691b4dbfc